--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\USER\AppData\Local\Temp\testng-eclipse-586818074\testng-customsuite.xml</span>
+                    <span>C:\Users\USER\AppData\Local\Temp\testng-eclipse-1066699614\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testpacakge.LoginPageTestClass" class="method navigator-link" hash-for-method="loginsaucelabtest">loginsaucelabtest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testpacakge.HomePageTestClass" class="method navigator-link" hash-for-method="homePageTest">homePageTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testpacakge.LoginPageTestClass</span>
+              <span class="class-name">testpacakge.HomePageTestClass</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginsaucelabtest">
-                  </a> <!-- loginsaucelabtest -->
-                  <span class="method-name">loginsaucelabtest</span>
+                  <a name="homePageTest">
+                  </a> <!-- homePageTest -->
+                  <span class="method-name">homePageTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\USER\AppData\Local\Temp\testng-eclipse-586818074\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\USER\AppData\Local\Temp\testng-eclipse-1066699614\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testpacakge.LoginPageTestClass&quot;&gt;
+      &lt;class name=&quot;testpacakge.HomePageTestClass&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;loginsaucelabtest&quot;/&gt;
+          &lt;include name=&quot;homePageTest&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- testpacakge.LoginPageTestClass --&gt;
+      &lt;/class&gt; &lt;!-- testpacakge.HomePageTestClass --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginsaucelabtest')
-data.setCell(0, 2, 'testpacakge.LoginPageTestClass')
-data.setCell(0, 3, 408);
+data.setCell(0, 1, 'homePageTest')
+data.setCell(0, 2, 'testpacakge.HomePageTestClass')
+data.setCell(0, 3, 1212);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 408 ms</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -224,18 +224,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testpacakge.LoginPageTestClass</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testpacakge.HomePageTestClass</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">InitializeBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">loginsaucelabtest</span>
-                <span class="method-start">3708 ms</span>
+                <span class="method-name">homePageTest</span>
+                <span class="method-start">3212 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">4121 ms</span>
+                <span class="method-start">4429 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
